apps/pvzge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: pvzge
  namespace: ynoacamino
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - pvz2.ynoacamino.me
      secretName: pvz2-tls

  rules:
    - host: pvz2.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pvzge
                port:
                  number: 80
